# 3-30-26build

./: README.md
legacyedge/: Cargo.toml  Dockerfile  README.md
legacyedge/src/: main.rs
legacyedge/static/: app.html  landing.html
